force-app/main/default/objects/Country_With_State_RMARequest__mdt/Country_With_State_RMARequest__mdt.object-meta.xml
<CustomObject>
    <label>Country with State-RMA Request</label>
    <pluralLabel>Country with State-RMA Request</pluralLabel>
</CustomObject>