force-app/main/default/objects/Country_With_State_RMARequest__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>