force-app/main/default/objects/Country_With_State_RMARequest__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>