force-app/main/default/objects/Country_With_State_RMARequest__mdt/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TSP Inc.</fullName>
                <default>true</default>
                <label>TSP Inc.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>